--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-        <title>Favorite Movies</title>
+        <title>Favourite Images</title>
         <link rel="stylesheet" href="assets/styles/app.css"/>
         <script src="assets/scripts/app.js" defer></script>
     </head>
@@ -22,6 +22,7 @@
             <div class="modal__actions">
                 <button class="btn btn--passive">Cancel</button>
                 <button class="btn btn--success">Add</button>
+                <button  class="btn btn--success" id="reset">Reset</button>
             </div>
         </div>
         <div class="modal" id="delete-modal">
@@ -43,7 +44,7 @@
 
         <main>
             <section id="entry-text" class="card">
-                <p>Your personal movie database!</p>
+                <p>Your personal Images database!</p>
             </section>
             <ul id="movie-list"></ul>
         </main>
